Update Определение перспективного тарифа для телеком-компании.ipynb

--- a/Определение перспективного тарифа для телеком-компании.ipynb
+++ b/Определение перспективного тарифа для телеком-компании.ipynb
@@ -1962,7 +1962,7 @@
    "source": [
     "### Вывод: \n",
     "#### Smart. Нормальное распределение, в среднем пользователи расходуют на 7% больше трафика чем есть в тарифе\n",
-    "#### Ultra. Нормальное распределение, в среднем пользователи расходуют на 36% больше трафика чем есть в тарифе"
+    "#### Ultra. Нормальное распределение, в среднем пользователи расходуют на 36% меньше трафика чем есть в тарифе"
    ]
   },
   {
